# VirtualJukebox-CLI-Client

./: .clang-format  .cmake-format.yaml  .gitmodules  CMakeLists.txt
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake
lib/: CMakeLists.txt
lib/httplib/: httplib.cc  httplib.h
src/: CMakeLists.txt  Exception.cpp  Exception.h  main.cpp  types.h
src/api/: api-types.h  api-v1-provider.cpp  api-v1-provider.h  api-v1.cpp  api-v1.h  deserializer.cpp  deserializer.h  http-status.h
src/api/v1/: Api.cpp  Api.h  ApiSingleton.cpp  ApiTypes.h  deserializer.h
src/exceptions/: APIException.cpp  APIException.h  InvalidFormatException.cpp  InvalidFormatException.h  NetworkException.cpp  NetworkException.h  ShellException.cpp  ShellException.h
src/shell/: Shell.cpp  Shell.h  ShellCommand.cpp  ShellCommand.h  shell.cpp  shell.h
src/shell/commands/: APIv1Commands.h  CmdAPIv1.cpp  CmdAPIv1.h  CmdExit.cpp  CmdExit.h  CmdHelp.cpp  CmdHelp.h  Exit.cpp  Exit.h  Help.cpp  Help.h  Login.cpp  PrintQueues.cpp
src/shell/commands/v1/: AddTrack.cpp  ApiCommands.h  ControlPlayer.cpp  Login.cpp  PrintQueues.cpp  Vote.cpp
src/utils/: http-status.h  utils.h
